--- a/ebookproject/src/main/resources/templates/mypage.html
+++ b/ebookproject/src/main/resources/templates/mypage.html
@@ -21,13 +21,13 @@
                 <section id="my-info-detail-section">
                     <div id="my-info-image-section">
                         <div>
-                            <img th:src="${#authentication.principal.userProfileImage}" src="https://cdn.inflearn.com/public/users/thumbnails/759418/09bcc1e5-b03d-46ed-8c6b-4aa283267e28" alt="">
+                            <img src="https://cdn.inflearn.com/public/users/thumbnails/759418/09bcc1e5-b03d-46ed-8c6b-4aa283267e28" alt="">
                         </div>
                     </div>
                     <div id="my-info-span-section">
                         <div>
                             <span>이름 : </span>
-                            <span th:text="${#authentication.principal.name}">홍길동</span>
+                            <span>홍길동</span>
                         </div>
                         <div id="password-change-btn">
                             <a href="">
@@ -36,15 +36,15 @@
                         </div>
                         <div>
                             <span>아이디 : </span>
-                            <span th:text="${#authentication.principal.username}">korea</span>
+                            <span>korea</span>
                         </div>
                         <div>
                             <span>닉네임 : </span>
-                            <span th:text="${#authentication.principal.userNickname}">라이언</span>
+                            <span>라이언</span>
                         </div>
                         <div>
                             <span>이메일 : </span>
-                            <span th:text="${#authentication.principal.userEmail}">99999@naver.com</span>
+                            <span>99999@naver.com</span>
                         </div>
                     </div>
                 </section>
@@ -53,8 +53,8 @@
             <section id="cash-section">
                 <div>
                     <span>보유 캐시 : </span>
-                    <span th:if="${#authentication.principal.userCash != 0}" th:text="${#authentication.principal.userCash}"></span>
-                    <span th:if="${#authentication.principal.userCash == 0}" th:text="0원">200원</span>
+<!--                    <span th:if="${#authentication.principal.userCash != 0}" th:text="${#authentication.principal.userCash}"></span>-->
+<!--                    <span th:if="${#authentication.principal.userCash == 0}" th:text="0원">200원</span>-->
                 </div>
                 <div>
                     <button>충전</button>
