--- a/ebookproject/src/main/resources/templates/user/login.html
+++ b/ebookproject/src/main/resources/templates/user/login.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
-    <link rel="stylesheet" href="../../static/css/public/public.css" th:href="@{/css/public/public.css}">
+    <link rel="stylesheet" href="../../static/css/pub/public.css" th:href="@{/css/pub/public.css}">
     <link rel="stylesheet" href="../../static/css/user/login.css" th:href="@{/css/user/login.css}">
     <script src="https://kit.fontawesome.com/3d4b55021f.js" crossorigin="anonymous"></script>
     <script src="../../static/js/user/login.js" th:src="@{/js/user/login.js}" defer></script>
@@ -36,28 +36,18 @@
                 <button id="login-btn">로그인</button>
         </form>
         <section id="nav-section">
-            <a href="#">아이디 찾기</a>
-            <a href="#">비밀번호 재설정</a>
+            <a href="/user/findId">아이디 찾기</a>
+            <a href="/user/resetPassword">비밀번호 재설정</a>
             <a href="/user/register">회원가입</a>
         </section>
         <section id="simple-login-section">
             <h4>간편 로그인</h4>
             <div>
-<<<<<<< HEAD
-                <a href="#"><img src="../../static/icons/kakao-login.png" th:src="@{/icons/kakao-login.png}" /></a>
-                <a href="#"><img src="../../static/icons/naver-login.png" th:src="@{/icons/naver-login.png}"/></a>
-                <a href="#"><img src="../../static/icons/google-login.png" th:src="@{/icons/google-login.png}"/></a>
-            </div>
-        </section>
-    </main>
-    <footer></footer>
-=======
                 <a href="/oauth2/authorization/kakao"><img src="../../static/icons/kakao-login.png" th:src="@{/icons/kakao-login.png}" /></a>
                 <a href="/oauth2/authorization/naver"><img src="../../static/icons/naver-login.png" th:src="@{/icons/naver-login.png}"/></a>
                 <a href="/oauth2/authorization/google"><img src="../../static/icons/google-login.png" th:src="@{/icons/google-login.png}"/></a>
             </div>
         </section>
     </main>
->>>>>>> 4b32d3bf719638e375094087c5822a7d16ddd8eb
 </body>
 </html>
