--- a/ebookproject/src/main/resources/templates/user/register.html
+++ b/ebookproject/src/main/resources/templates/user/register.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>회원가입 | KOREAIT</title>
-    <link rel="stylesheet" href="../../static/css/public/public.css" th:href="@{/css/public/public.css}">
+    <link rel="stylesheet" href="../../static/css/pub/public.css" th:href="@{/css/pub/public.css}">
     <link rel="stylesheet" href="../../static/css/user/register.css" th:href="@{/css/user/register.css}">
     <script src="https://kit.fontawesome.com/d19fdaba43.js" crossorigin="anonymous"></script>
     <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
@@ -31,17 +31,11 @@
             <section class="form-section">
                 <label>
                     <i class="fa-solid fa-user"></i>
-                    <input type="text" name="id" th:value="${id}" id="id" placeholder="아이디 (4-16글자)" maxlength="16">
-<<<<<<< HEAD
-                    <button id="id-duplication-btn">중복확인</button>
-                </label>
-            </section>
-=======
+                    <input type="text" name="userId" th:value="${id}" id="id" placeholder="아이디 (4-16글자)" maxlength="16">
                     <button id="id-duplication-btn" type="button">중복확인</button>
                 </label>
             </section>
 
->>>>>>> 4b32d3bf719638e375094087c5822a7d16ddd8eb
             <div class="valid-check id">
                 아이디는 4-16 글자 내여야 합니다
             </div>
@@ -49,16 +43,13 @@
             <section class="form-section">
                 <label>
                     <i class="fa-solid fa-lock"></i>
-                    <input type="password" name="password" th:value="${password}" class="pw-input" placeholder="비밀번호 (영문자 및 숫자, 특수문자 포함)">
+                    <input type="password" name="userPassword" th:value="${password}" class="pw-input" placeholder="비밀번호 (영문자 및 숫자, 특수문자 포함)">
                     <button class="pw-view-btn" type="button"><i class="fa-solid fa-eye"></i></button>
                 </label>
             </section>
-<<<<<<< HEAD
-=======
             <div class="valid-check pw1">
                 영문자 및 숫자, 특수문자 포함
             </div>
->>>>>>> 4b32d3bf719638e375094087c5822a7d16ddd8eb
 
             <section class="form-section">
                 <label>
@@ -67,11 +58,7 @@
                     <button class="pw-view-btn" type="button"><i class="fa-solid fa-eye"></i></button>
                 </label>
             </section>
-<<<<<<< HEAD
-            <div class="valid-check pw">
-=======
             <div class="valid-check pw2">
->>>>>>> 4b32d3bf719638e375094087c5822a7d16ddd8eb
                 영문자 및 숫자, 특수문자 포함
             </div>
 
@@ -79,7 +66,7 @@
                 <label>
                     <i class="fa-solid fa-envelope"></i>
                     <input type="text" id="email-head" placeholder="이메일 주소">
-                    <input type="hidden" id="full-email" name="email" th:value="${email}">
+                    <input type="hidden" id="full-email" name="userEmail" th:value="${email}">
                 </label>
                 <span>@</span>
                 <label>
@@ -97,19 +84,19 @@
             <div class="valid-check email">
                 유효한 이메일 주소를 작성하세요
             </div>
-
-            <h3>선택정보</h3>
             <section class="form-section">
                 <label>
                     <i class="fa-regular fa-user"></i>
-                    <input type="text" placeholder="이름" name="name" th:value="${name}">
+                    <input type="text" placeholder="이름" name="userName" th:value="${name}">
                 </label>
             </section>
+
+            <h3>선택정보</h3>
 
             <section class="form-section">
                 <label>
                     <i class="fa-solid fa-signature"></i>
-                    <input type="text" placeholder="닉네임" name="nickname" th:value="${nickname}">
+                    <input type="text" placeholder="닉네임" name="userNickname" th:value="${nickname}">
                 </label>
             </section>
 
