--- a/ebookproject/src/main/resources/templates/layout/header.html
+++ b/ebookproject/src/main/resources/templates/layout/header.html
@@ -66,9 +66,12 @@
                         <a href="/user/login">
                             <div sec:authorize="!isAuthenticated()" id="login-btn">로그인</div>
                         </a>
-                        <a sec:authorize="isAuthenticated()" id="logout-btn">
-                            <div>로그아웃</div>
-                        </a>
+                        <div>
+                            <form th:action="@{/logout}" method="post">
+                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                                <button type="submit" sec:authorize="isAuthenticated()" id="logout-btn">로그아웃</button>
+                            </form>
+                        </div>
                     </div>
                 </section>
             </section>
